# ai-news-digest

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
src/: __init__.py  api.py  conferences.py  seed_data.py
src/collectors/: __init__.py  rss_collector.py  web_scraper.py  youtube_collector.py
src/config/: __init__.py  settings.py
src/digest/: __init__.py  generator.py  sender.py
src/processors/: __init__.py  summarizer.py  transcriber.py
src/scheduler/: __init__.py  jobs.py
src/storage/: __init__.py  database.py  models.py
templates/: digest_email.html
tests/: test_collectors.py  test_digest.py
web/: app.html  index.html
web/data/: companies.json  feed.json  stats.json  themes.json
