[project]
name = "ai-news-digest"
version = "0.1.0"
description = "AI News Digest for Enterprise AI Investment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0.10",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "yt-dlp>=2024.1.0",
    "google-api-python-client>=2.100.0",
    "openai-whisper>=20231117",
    "anthropic>=0.18.0",
    "sendgrid>=6.10.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
